--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <h1>HELLO WORLD</h1>
+    
     <section class="hero">
         <div class="container">
             <header class="header header_flex">
