--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 </head>
 
 <body>
-    <h1>HELLO WORLD</h1>
-
     <section class="hero">
         <div class="container">
             <header class="header header_flex">
@@ -109,21 +107,21 @@
             <div class="d-flex j-c gap f-w">
                 <div class="col-3">
                     <div class="choose_cards-content">
-                        <img src="./img/cases.svg" alt="cases" class="choose_svg">
+                        <img src="./img/cases.svg" alt="" class="choose_svg">
                         <h2 class="choose_cards-content_title">3K</h2>
                         <p class="choose_cards-content_text">CASES DONE</p>
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="choose_cards-content">
-                        <img src="./img/happe.svg" alt="happy" class="choose_svg">
+                        <img src="./img/happe.svg" alt="" class="choose_svg">
                         <h2 class="choose_cards-content_title">45</h2>
                         <p class="choose_cards-content_text">HAPPY CUSTOMERS</p>
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="choose_cards-content">
-                        <img src="./img/award.svg" alt="award" class="choose_svg">
+                        <img src="./img/award.svg" alt="" class="choose_svg">
                         <h2 class="choose_cards-content_title">12+</h2>
                         <p class="choose_cards-content_text">AWARD WINNING</p>
                     </div>
